src/css/pages/home.scss
/* ... */
.testimonials {
  &-section {
    width: 100%;
  }

  &__list-paginations {
    bottom: rem(36);
  }

  &__list {
    margin: 0 auto;

    @media (min-width: rem(728)) {
      max-width: rem(640);
    }

    @media (min-width: rem(800)) {
      max-width: rem(768);
    }

    @media (min-width: rem(1024)) {
      max-width: rem(900);
    }

    &-item {
      blockquote {
        font-size: rem(18);

        @media (min-width: rem(768)) {
          font-size: rem(24);
        }

        @media (min-width: rem(1024)) {
          font-size: rem(36);
        }
      }

      blockquote p {
        margin-bottom: rem(24);

        text-align: left;

        font-weight: $tuf-font-weight-bold;

        color: $tuf-color-turqoise;
      }

      blockquote footer {
        font-weight: $tuf-font-weight-light;

        color: $tuf-color-white;

        text-align: right;

        font-size: rem(18);

        @media (min-width: rem(768)) {
          font-size: rem(20);
        }

        @media (min-width: rem(1024)) {
          font-size: rem(24);
          text-align: center;
        }
      }

      blockquote p::before {
        content: '\201C';
      }

      blockquote p::after {
        content: '\201D';
      }
    }
  }
}

.ask-ava {
  &__content {
    display: flex;

    flex-direction: column;

    align-items: center;

    @media only screen and (min-width: rem(1024)) {
      flex-direction: row;
    }


    &__head,
    &__text {
      width: 100%;

      @media only screen and (min-width: rem(1024)) {
        width: 50%;
      }
    }

    &__text {
      max-width: 80%;
      font-size: rem(30);
      font-weight: $tuf-font-weight-bold;

      line-height: 1.3;
      color: $tuf-color-white;

      @media only screen and (min-width: rem(1024)) {
        max-width: none;
        font-size: rem(60);
      }

      &__btn {
        margin-top: rem(48);
      }
    }

    &__textbox {
      min-height: rem(1.3 * 30);
    }

    &__head {
      text-align: center;

      &-items {
        position: relative;
      }

      &__lips {
        position: absolute;

        top: 59.5%;
        left: 48%;

        // width of lips is 157
        // total head width is 817
        width: calc((157/817) * 100%);

        transform: translate(-50%, -50%);

        img {
          position: absolute;

          top: 50%;
          left: 50%;

          width: 100%;

          opacity: 0;

          will-change: opacity;

          transform: translate(-50%, -50%);

          &:first-child {
            opacity: 1;
          }
        }
      }
    }
  }
}

.what-we-do {
  &__content {
    padding-right: 0;
    padding-left: 0;
  }

  &__list {
    position: relative;
    width: 100%;

    max-width: rem(1440);

    padding: 0;

    @media (min-width: rem(1310)) {
      padding: $tuf-content-padding-d;
    }
  }

  &__list-paginations {
    @media (min-width: rem(1310)) {
      display: none;
    }
  }

  &__list-items {
    display: flex;

    flex-direction: row;

    flex-wrap: nowrap;

    justify-content: space-between;

    align-items: stretch;
  }

  &__list-item {
    position: relative;
    width: 100%;

    height: auto;

    @media (min-width: rem(768)) {
      width: calc((100% - (#{rem(24)} * 3)) / 3);
    }

    @media (min-width: rem(1310)) {
      width: calc((100% - (#{rem(24)} * 3)) / 3);

      &:nth-child(2) {
        margin: 0 rem(24);
      }
    }

    &__card {
      display: flex;

      flex-direction: column;

      width: 100%;
      height: 100%;

      box-sizing: border-box;

      padding: rem(28);

      border: rem(2) solid $tuf-color-card-border;

      transition: border-color .25s ease-in-out;

      cursor: pointer;

      &:focus {
        outline: none;
      }

      &:hover,
      &:focus {
        border-color: $tuf-color-turqoise;
      }

      &__title,
      &__content,
      &__footnote,
      &__link {
        color: $tuf-color-white;
      }

      &__content,
      &__footnote {
        font-weight: $tuf-font-weight-regular;
      }

      &__title {
        margin: rem(24) 0;

        font-size: rem(27);

        line-height: 1.2;

        @media screen and (min-width: rem(768)) {
          font-size: rem(30);
        }
      }

      &__content {
        margin-bottom: rem(24);
        font-size: rem(18);

        @media screen and (min-width: rem(768)) {
          font-size: rem(24);
        }
      }

      &__footnote {
        font-size: rem(15);

        margin-bottom: rem(64);

        @media screen and (min-width: rem(768)) {
          font-size: rem(16);
        }
      }

      &__link {
        position: absolute;

        display: flex;

        align-items: center;

        bottom: rem(24);
        left: 0;

        width: 100%;
        height: rem(40);

        padding: 0 rem(24);

        background-color: transparent;

        border: 0;

        font-size: rem(16);

        font-weight: $tuf-font-weight-medium;

        @media screen and (min-width: rem(768)) {
          font-size: rem(18);
        }

        &__icon {
          margin-right: rem(16);
        }
      }
    }
  }

  &__cta {
    width: fit-content;

    margin: 0 auto;
  }

  &__footnote {
    margin-top: rem(64);
    margin-bottom: rem(48);

    &__content {
      padding: rem(24);
      box-sizing: border-box;

      margin: 0 auto;

      border: rem(2) solid $tuf-color-turqoise;

      color: $tuf-color-white;

      @media (min-width: rem(768)) {
        max-width: rem(800);

        text-align: center;
      }

      &__title {
        font-size: rem(18);
        font-weight: $tuf-font-weight-bold;
        line-height: 1.3;
        margin-bottom: rem(16);

        @media (min-width: rem(768)) {
          font-size: rem(24);
        }
      }

      p {
        font-size: rem(15);
        font-weight: $tuf-font-weight-regular;
        line-height: 1.2;

        @media (min-width: rem(768)) {
          font-size: rem(18);
        }
      }
    }
  }
}
/* ... */

